--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CyberBoyAyush</title>
-        <link rel="icon" href="https://img.icons8.com/cotton/64/000000/administrator-male.png" type="image/x-icon">
+        <link rel="icon" href="https://github.com/CyberBoyAyush/Portfolio/master/blob/profile.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Bellota&display=swap" rel="stylesheet">
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
